# Plants-vs-Zombies-cheats

./: Cargo.toml  README.md  entities-replanted.rcnet  entities.rcnet
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  release.yaml
ghidra-structs/: griditem.h  plant.h
ghydra-structs/: coin.h  player.h  world.h  zombie.h
src/: cheated_entity.rs  entities_loader.rs  game.rs  gui.rs  lib.rs  main.rs  models.rs  offsets.rs  overlay_gui.rs  reader_at.rs  toggleables.rs  traits.rs
src/models/: card.rs  card_type.rs  coin.rs  coin_type.rs  entities.rs  griditem.rs  griditem_type.rs  lawnmower.rs  lawnmower_type.rs  mod.rs  plant.rs  plant_type.rs  projectile.rs  projectile_type.rs  traits.rs  zombie.rs  zombie_type.rs
src/parsers/: card.rs  coin.rs  griditem.rs  lawnmower.rs  mod.rs  plant.rs  projectile.rs  reader_at.rs  zombie.rs
src/pvz_sdk/: cheated_entity.rs  entities_loader.rs  game.rs  mod.rs  offsets.rs  reader_at.rs  traits.rs
src/pvz_sdk/entities/: coin.rs  griditem.rs  lawnmower.rs  lawnmower_type.rs  mod.rs  plant.rs  plant_type.rs  projectile.rs  projectile_type.rs  slot.rs  slot_type.rs  zombie.rs  zombie_type.rs
src/pvz_sdk/models/: card.rs  card_type.rs  coin.rs  entities.rs  griditem.rs  lawnmower_type.rs  mod.rs  plant_type.rs  (+2 more)
src/toggleables/: fast_chomper.rs  free_plants.rs  infinite_lawnmowers.rs  instant_recharge.rs  invincible_plants.rs  mod.rs  no_pause.rs  plant_anywhere.rs  seethrough_vases.rs  traits.rs
src/writers/: card.rs  coin.rs  griditem.rs  lawnmower.rs  mod.rs  plant.rs  projectile.rs  zombie.rs
(+39 files in other folders)
