[package]
name = "pvz_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }
eframe = { version = "0.32.1" }
egui = "0.32.1"
env_logger = "0.11.8"
proc_mem = "0.1.6"
num_enum = "0.7.4"
