[package]
name = "pvz_cheats"
version = "0.1.0"
edition = "2024"
default-run = "testing"


[lib]
name = "pvz_sdk"

[[bin]]
name = "gui"

[[bin]]
name = "testing"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }
env_logger = "0.11.8"
proc_mem = "0.1.6"
num_enum = "0.7.4"
eframe = { version = "0.32.1" }
egui = "0.32.1"
thiserror = "2.0.16"
log = "0.4.27"
anyhow = "1.0.99"
